Divide VariableMap (variables vs groups) in MetadataModel